# elevenlabs-sdk-rs

./: .typos.toml  AGENTS.md  Cargo.toml  Justfile  README.md  cliff.toml  context7.json  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
.opencode/skills/pb-build/: SKILL.md
.opencode/skills/pb-init/: SKILL.md
.opencode/skills/pb-plan/: SKILL.md
.opencode/skills/pb-refine/: SKILL.md
crates/elevenlabs-sdk/: Cargo.toml
crates/elevenlabs-sdk/examples/: streaming.rs  text_to_speech.rs  voices.rs  websocket_tts.rs
crates/elevenlabs-sdk/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  middleware.rs
crates/elevenlabs-sdk/src/services/: agents.rs  audio_isolation.rs  audio_native.rs  dubbing.rs  forced_alignment.rs  history.rs  mod.rs  models.rs  music.rs  pvc_voices.rs  single_use_token.rs  sound_generation.rs  speech_to_speech.rs  speech_to_text.rs  studio.rs  text_to_dialogue.rs  text_to_speech.rs  text_to_voice.rs  user.rs  voice_generation.rs  voices.rs  workspace.rs
crates/elevenlabs-sdk/src/types/: agents.rs  audio_isolation.rs  audio_native.rs  common.rs  dubbing.rs  forced_alignment.rs  history.rs  mod.rs  models.rs  music.rs  pronunciation.rs  pvc_voices.rs  samples.rs  single_use_token.rs  sound_generation.rs  speech_to_speech.rs  speech_to_text.rs  studio.rs  text_to_dialogue.rs  text_to_speech.rs  text_to_voice.rs  user.rs  voice_generation.rs  voices.rs  workspace.rs
crates/elevenlabs-sdk/src/ws/: conversation.rs  conversation_handler.rs  mod.rs  tts.rs  tts_handler.rs
crates/elevenlabs-sdk/tests/: integration_test.rs
docs/: openapi.json
scripts/: check_coverage.py  mock-server.py  prism-test.sh
specs/2026-02-15-01-elevenlabs-rust-sdk/: design.md  tasks.md
specs/2026-02-16-01-cli-and-ws-transport/: design.md  tasks.md
