[package]
name = "elevenlabs-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-core.workspace = true
hpx = { workspace = true, features = [
    "rustls-tls",
    "http1",
    "http2",
    "json",
    "stream",
] }
hpx-transport.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
